# finreg-compliance-env

./: Dockerfile  README.md  __init__.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py
.github/workflows/: docker-build.yml
server/: app.py  finreg_environment.py  requirements.txt
